# bili2txt-agent

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  Dockerfile  FIX_SUMMARY.md  LICENSE  NOTICE.txt  PLACEHOLDER_FIX.md  README.md  SHORT_LINK_PARSING.md  WEBSOCKET_SETUP.md  asr_utils.py  audio_utils.py  bilibili_utils.py  config.py  doc_utils.py  docker-compose.yml  feishu_handler.py  install-ffmpeg.ps1  llm_utils.py  main.py  pyproject.toml  requirements.txt  task.py  test_document_api.py  test_max_tokens_unlimited.py  test_remove_max_tokens.py  test_short_link.py  test_simple_write.py  test_unlimited_tokens_simple.py  test_video_title_prompt.py  test_video_title_simple.py  utils.py  开发文档.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
docs/: ARCHITECTURE.md  BLOCK_API_OPTIMIZATION.md  CACHE.md  CONCURRENT_PROCESSING.md  CONFIGURATION.md  DOC_CONTENT_WRITE_FIX.md  DOWNLOAD_TROUBLESHOOTING.md  FAQ.md  FEISHU_DOCS.md  FEISHU_DOC_DOMAIN_CONFIG.md  FEISHU_DOC_WRITE_API_SOLUTION.md  IMPORT_API_IMPLEMENTATION.md  IMPORT_API_UPDATE.md  INTEGRATION_COMPLETE.md  MAX_TOKENS_UNLIMITED.md  MIGRATION_TO_YT_DLP.md  PROJECT_REFACTORING.md  PROJECT_STRUCTURE.md  PROXY_SETUP.md  README.md  REMOVE_MAX_TOKENS_CONTROL.md  SECURITY.md  SRC_DIRECTORY_REFACTORING.md  VIDEO_DOWNLOAD.md  VIDEO_QUALITY_CONTROL.md  VIDEO_QUALITY_TESTING.md  VIDEO_TITLE_IN_PROMPT.md  YT_DLP_ALTERNATIVE.md
src/: __init__.py  asr_utils.py  bilibili_downloader.py  bilibili_utils.py  cache_utils.py  config.py  doc_utils.py  feishu_handler.py  feishu_ws_client.py  llm_utils.py  processing_tracker.py  task.py
tests/: README.md  __init__.py  diagnose_you_get.py  test_actual_download.py  test_document_api.py  test_import_api.py  test_integration.py  test_max_tokens_unlimited.py  test_remove_max_tokens.py  test_short_link.py  test_simple_write.py  test_unlimited_tokens_simple.py  test_video_quality.py  test_video_title_prompt.py  test_video_title_simple.py  test_yt_dlp.py
